--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-html code yahi rakhna hai
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,45 +5,70 @@ html code yahi rakhna hai
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vineeta Bachani - DevOps Engineer</title>
     <style>
+        /* Google Fonts */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+        /* Full Background Image */
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
-            background-color: #f4f4f4;
+            background: url('https://source.unsplash.com/1600x900/?flowers,books,wooden-table') no-repeat center center/cover;
             padding: 50px;
+            color: #333;
         }
+
+        /* Main Container */
         .container {
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-            max-width: 400px;
+            background: rgba(255, 255, 255, 0.92);
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.3);
+            max-width: 450px;
             margin: auto;
+            position: relative;
+            overflow: hidden;
         }
+
+        /* Profile Picture (Proper Size) */
         .profile-pic {
-            width: 120px;
-            height: 120px;
+            width: 140px;
+            height: 140px;
             border-radius: 50%;
             object-fit: cover;
-            border: 3px solid #0077b5;
+            border: 5px solid #4CAF50;
+            margin-top: -75px;
+            background: white;
+            padding: 5px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
+
+        /* Name & Title */
         h1 {
-            color: #333;
-            margin: 10px 0;
+            color: #2E8B57;
+            margin: 15px 0;
         }
         h3 {
-            color: #0077b5;
-            margin-bottom: 5px;
+            color: #4B0082;
+            margin-bottom: 10px;
         }
+
+        /* Description */
         p {
-            color: #666;
-            font-size: 16px;
+            color: #444;
+            font-size: 15px;
             margin: 10px 0 20px;
         }
+
+        /* Social Buttons */
         .social-buttons {
             display: flex;
             justify-content: center;
             gap: 15px;
+            margin-top: 20px;
         }
+
         .button {
             display: flex;
             align-items: center;
@@ -54,9 +78,10 @@ html code yahi rakhna hai
             text-decoration: none;
             font-weight: bold;
             color: white;
-            width: 140px;
+            width: 150px;
             transition: 0.3s;
         }
+
         .linkedin {
             background-color: #0077b5;
         }
@@ -70,20 +95,31 @@ html code yahi rakhna hai
             background-color: #c13584;
         }
         .button img {
-            width: 20px;
-            height: 20px;
-            margin-right: 8px;
+            width: 22px;
+            height: 22px;
+            margin-right: 10px;
         }
+
+        /* Flower Decorations */
+        .flower {
+            position: absolute;
+            width: 60px;
+            opacity: 0.8;
+        }
+        .flower1 { top: -10px; left: -10px; transform: rotate(-20deg); }
+        .flower2 { bottom: -10px; right: -10px; transform: rotate(30deg); }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <img src="https://via.placeholder.com/120" alt="Vineeta Bachani" class="profile-pic">
+        <!-- Tumhari Profile Picture Yahan Lagegi -->
+        <img src="profile.jpg" alt="Vineeta Bachani" class="profile-pic">
+        
         <h1>Vineeta Bachani</h1>
         <h3>DevOpsInsider Batch 17, Group 12 - Lead</h3>
-        <p>🚀 An aspiring DevOps Engineer who thrives on automation and cloud technology. A smart, intelligent, and coffee-loving tech enthusiast ☕ with a passion for solving complex problems. Always eager to learn and innovate! ✨</p>
-        
+        <p> An aspiring DevOps Engineer who thrives on automation and cloud technology. A smart, intelligent, and coffee-loving tech enthusiast ☕ with a passion for solving complex problems. Always eager to learn and innovate! ✨</p>
+
         <div class="social-buttons">
             <a href="https://www.linkedin.com/in/vineetabachani/" target="_blank" class="button linkedin">
                 <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"> LinkedIn
@@ -92,6 +128,10 @@ html code yahi rakhna hai
                 <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"> Instagram
             </a>
         </div>
+
+        <!-- Decorative Flowers -->
+        <img src="https://source.unsplash.com/100x100/?flower" class="flower flower1">
+        <img src="https://source.unsplash.com/100x100/?flowers" class="flower flower2">
     </div>
 
 </body>
